--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "dependencies": {
+    "@types/node-telegram-bot-api": "^0.64.0",
     "axios": "^1.6.2",
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
     "node-telegram-bot-api": "^0.64.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.10",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.2"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
