--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "axios": "^1.6.2",
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
-    "node-telegram-bot-api": "^0.64.0"
+    "node-telegram-bot-api": "^0.64.0",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.10",
