--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         /* Basic Options */
         "target": "es6",                                 // Specify ECMAScript target version
-        "module": "commonjs",                            // Specify module code generation
+        "module": "es6",                                 // Specify module code generation
         "lib": ["es6", "dom"],                           // Specify library files to be included in the compilation
         "outDir": "./dist",                              // Redirect output structure to the directory
         "rootDir": "./",                                 // Specify the root directory of input files
