fix: update node version for actions

--- a/.github/workflows/telegram-action.yml
+++ b/.github/workflows/telegram-action.yml
@@ -2,32 +2,32 @@ name: Post to Telegram
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs at 00:00 UTC every day
+    - cron: "0 0 * * *" # Runs at 00:00 UTC every day
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v2
+      - name: Check out repository
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'  # Specify the Node.js version
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16" # Specify the Node.js version
 
-    - name: Install TypeScript
-      run: npm install -g typescript
+      - name: Install TypeScript
+        run: npm install -g typescript
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Build TypeScript files
-      run: tsc
+      - name: Build TypeScript files
+        run: tsc
 
-    - name: Run script
-      run: node dist/index.js  # Use 'dist' folder if TypeScript output goes there
-      env:
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+      - name: Run script
+        run: node dist/index.js # Use 'dist' folder if TypeScript output goes there
+        env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
